<resources>
    <string name="app_name">My UU (beta)</string>
    <string name="search_title">Search</string>
    <string name="my_lessons">My Lessons</string>
    <string name="my_reminders">My Reminders</string>
    <string name="my_events">My Events</string>
    <string name="settings">My Settings</string>
    <string name="help">My help</string>

    <string name="view_navigation_open">Open</string>
    <string name="view_navigation_close">Close</string>

    <string name="tab_item_lessons">LESSONS</string>
    <string name="tab_item_reminders">REMINDERS</string>
    <string name="tab_item_uu_events">UU EVENTS</string>

    <string name="LangTitle">language</string>
    <string name="LangDialogTitle">Select language:</string>
    <string name="LangSummary">The application language.\nYou need to restart the application for making changes.</string>

</resources>
